--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -14,6 +14,6 @@
     <p></p>
     <input type="number" placeholder="Number Of Stocks To Sell" class="form-control mx-auto w-auto" name="shares" min=0>
     <p></p>
-    <button type="submit" class="btn btn-primary">Buy</button>
+    <button type="submit" class="btn btn-primary">Sell</button>
 </form>
 {% endblock%}
