--- a/finance/templates/register.html
+++ b/finance/templates/register.html
@@ -14,7 +14,7 @@
             <p></p>
             <input class="form-control mx-auto w-auto" id="conf" name="confirmation" placeholder="Confirm password" type="password">
         </div>
-        <button class="btn btn-primary" type="submit" id= "butt">Log In</button>
+        <button class="btn btn-primary" type="submit" id= "butt">Register</button>
     </form>
         <script>
             confirm = document.querySelector("#conf");
